[package]
name = "mpu6050-dmp-demo-f1"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
mpu6050-dmp = { git = "https://github.com/barafael/mpu6050-dmp" }

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]
